syntax = "proto3";

package gitaly;

option go_package = "gitlab.com/gitlab-org/gitaly/proto/go/gitalypb";

import "lint.proto";
import "shared.proto";
import "google/protobuf/timestamp.proto";

service PraefectInfoService {
  rpc RepositoryReplicas(RepositoryReplicasRequest) returns (RepositoryReplicasResponse) {
    option (op_type) = {
      op: ACCESSOR
      scope_level: SERVER
    };
  }
  // ConsistencyCheck will perform a consistency check on the requested
  // virtual storage backend. A stream of repository statuses will be sent
  // back indicating which repos are consistent with the primary and which ones
  // need repair.
  rpc ConsistencyCheck(ConsistencyCheckRequest) returns (stream ConsistencyCheckResponse) {
    option (op_type) = {
      op: ACCESSOR
      scope_level: STORAGE
    };
  }

  // DatalossCheck returns the count of dead replica jobs created within a given
  // timeframe. Dead replica jobs can indicate data loss and can be helpful in debugging
  // impact of a primary node failure.
  rpc DatalossCheck(DatalossCheckRequest) returns (DatalossCheckResponse) {
    option (op_type) = {
      op: ACCESSOR
      scope_level: SERVER
    };
  }
}

// DatalossCheckRequest fetches dead replica jobs from praefect.
message DatalossCheckRequest {
  // from is an inclusive beginning of the timeframe the dead replica jobs are to be
  // counted in.
  google.protobuf.Timestamp from = 1;
  // to is an exclusive ending of the timeframe the dead replica jobs are to be
  // counted in.
  google.protobuf.Timestamp to = 2;
}

// DatalossCheckResponse contains dead replica jobs by repository.
message DatalossCheckResponse {
  // by_relative_path contains the count of dead replica job by repository relative
  // path within the requested timeframe.
  map<string,int64> by_relative_path = 1;
}

message RepositoryReplicasRequest{
  Repository repository = 1;
}

message RepositoryReplicasResponse{
  message RepositoryDetails {
    Repository repository = 1;
    string checksum = 2;
  };

  RepositoryDetails primary = 1;
  repeated RepositoryDetails replicas = 2;
}

message ConsistencyCheckRequest {
  string virtual_storage = 1 [(storage)=true];
  // The target storage is the storage you wish to check for inconsistencies
  // against a reference storage (typically the current primary).
  string target_storage = 2;
  // Optionally provide a reference storage to compare the target storage
  // against. If a reference storage is omitted, the current primary will be
  // used.
  string reference_storage = 3;
  // Be default, reconcilliation is enabled. Disabling reconcilliation will
  // make the request side-effect free.
  bool disable_reconcilliation = 4;
}

message ConsistencyCheckResponse {
  string repo_relative_path = 1;
  string target_checksum = 2;
  string reference_checksum = 3;
  // If resync was enabled, then each inconsistency will schedule a replication
  // job. A replication ID is returned to track the corresponding job.
  uint64 repl_job_id = 4;
  // If the reference storage was not specified, reply with the reference used
  string reference_storage = 5;
}
